@@ -1,9 +1,9 @@
 6071edd604dbeb75308cfbedc7790398 *cleanup
 30a444c58adaf9b99783d22d75d60c61 *configure
 ecb8de8da05728052e6c83046fd1dffd *DESCRIPTION
-a998a7fb04f357da7e0ab41a8095fc56 *inst/NEWS.Rd
+4df07c46428de45eec4989b035672987 *inst/NEWS.Rd
 a87b0f223435ed35607e8514562b8bfe *LICENSE
-6de3f1a90503ec9160d604ea3b1e0e50 *man/charToFact.Rd
+5df28320757432a550ff962f2f1aed20 *man/charToFact.Rd
 8f19a2c9feb2f352580fd4892650f285 *man/count.Rd
 d143e1321d840bb810d9648e54e22c9c *man/fpos.Rd
 1cce4277e2dd16a0f68c96d744b7bc17 *man/funique.Rd
@@ -15,7 +15,7 @@ d4d3e5eb9266703d533ef42053474ac6 *man/psum.Rd
 e0d3b091b5182fdcc8868c93a2c59476 *man/topn.Rd
 3c628c2a27764ec5df2b4980921c310f *man/vswitch.Rd
 8960e9e411b8ff99c638d49e3f28e334 *NAMESPACE
-25d68cb135e12c1f71b1af5c79051245 *R/call.R
+5dccd70d0654bd9ce1b57eda2e4b6456 *R/call.R
 fa0ca12018176564236efd16b8d8e9d8 *README.md
 c8b66ed8ebc22f5af194fd12b517cb53 *src/dup.c
 5e71dad4ea42b327b06727664fcb74c7 *src/dupLen.c
@@ -26,10 +26,10 @@ fd6cda120996057e4520025e191ddaab *src/kit.h
 63b898312ccf39a20bd7fbd8dcca5621 *src/Makevars.in
 95e3011e37d9dde0d75f3a3819b2acd3 *src/Makevars.win
 8e997b5d5d44af5cea7eafb48a4b9745 *src/nswitch.c
-4d733f094a1dfd11167ddeb3317d2ca3 *src/psort.c
+c30207c8b3b6368935af102da8dea563 *src/psort.c
 0f6ed50990a4fe1cc541c964ae1a7ecd *src/psum.c
 75f88aa2b5fbc936c6de93efaa8ff236 *src/topn.c
 c70104d7de206d29dc3efcf82d36c4de *src/utils.c
 3476a1e2381bb86f68a72844ee61bc7b *src/vswitch.c
-26565655f12c8b750957b6baa25cd378 *tests/test_kit.R
-04b50f43af3a8657abc996e312cfff88 *tests/test_kit.Rout.save
+adf322048b54eb5564c3e0baaef4a47b *tests/test_kit.R
+3285a138fb66fb9919642a88b2dec366 *tests/test_kit.Rout.save
