@@ -1659,6 +1659,7 @@ Attaching kit 0.0.7 (OPENMP enabled using 1 thread)
 > check("0021.004", charToFact(c("2L","1L","3L"),nThread=1), error="Argument 'nThread' (double) must be of type integer.")
 > check("0021.005", charToFact(1L), error="Argument 'x' must be of type character.")
 > check("0021.006", charToFact(c("a","b",NA,"a")), addNA(as.factor(c("a","b",NA,"a"))))
+> check("0021.007", levels(charToFact(x1,decreasing = TRUE)), sort(levels(as.factor(x1)),decreasing = TRUE))
 > 
 > rm(x1)
 > 
@@ -1675,4 +1676,4 @@ Attaching kit 0.0.7 (OPENMP enabled using 1 thread)
 > 
 > proc.time()
    user  system elapsed 
-  4.233   0.517   4.749 
+  4.225   0.568   4.796 
